rnsc/test_data/integration/error/parser/type_hints/int/missing_operand.rns
.class @int
.super java/lang/Object
